test/corpus/geo_test_gaussian.txt
==================
geo gaussian format
==================

explaination placeholder
$GEO
F 0.0 0.0 -0.7
F 0.0 0.0 0.7
$END

---

(source_file
    (explanation)
    (geo_section
    start_token: (geo_start_token)
    (atom_list
        (gaussian_format_atom
        x: (float)
        y: (float)
        z: (float))
        (gaussian_format_atom
        x: (float)
        y: (float)
        z: (float)))
    (end_token)))
